--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@ understanding of problems and methods among the workshop participants.</p>
           <h3><a href="https://www.iiti.ac.in/people/~safique/" target="_blank">Prof. Safique Ahmad</a></h3>
           <p>Professor, IIT Indore.</p>
       </div>
+    <!-- Speaker 4-->
+      <div class="speaker">
+          <img src="speakers/speaker4.jpg" alt="Prof. Phani Motamri" class="speaker-photo">
+          <h3><a href="https://www.iiti.ac.in/people/~safique/" target="_blank">Prof. Safique Ahmad</a></h3>
+          <p>Associate Professor, IISc Bangalore.</p>
+      </div>
+    <!-- Speaker 5-->
+      <div class="speaker">
+          <img src="speakers/speaker5.jpg" alt="Bhupendra Singh" class="speaker-photo">
+          <h3><a href="https://www.iiti.ac.in/people/~safique/" target="_blank">Bhupendra Singh</a></h3>
+          <p>Scientist, DRDO India.</p>
+      </div>
       
       <!-- Speaker 6 -->
       <div class="speaker">
