--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@ understanding of problems and methods among the workshop participants.</p>
       </div>
     <!-- Speaker 4-->
       <div class="speaker">
-          <img src="speakers/speaker4.jpg" alt="Prof. Phani Motamri" class="speaker-photo">
-          <h3><a href="https://www.iiti.ac.in/people/~safique/" target="_blank">Prof. Safique Ahmad</a></h3>
+          <img src="speakers/speaker4.jpg" alt="Prof. Phani Motamrri" class="speaker-photo">
+          <h3><a href="https://cds.iisc.ac.in/people/phani-motamarri/" target="_blank">Prof. Phani Motamarri</a></h3>
           <p>Associate Professor, IISc Bangalore.</p>
       </div>
     <!-- Speaker 5-->
       <div class="speaker">
           <img src="speakers/speaker5.jpg" alt="Bhupendra Singh" class="speaker-photo">
-          <h3><a href="https://www.iiti.ac.in/people/~safique/" target="_blank">Bhupendra Singh</a></h3>
+          <h3><a href="https://www.linkedin.com/in/bhupendra-singh-5ab5327/?originalSubdomain=in" target="_blank">Bhupendra Singh</a></h3>
           <p>Scientist, DRDO India.</p>
       </div>
       
